# dirigo-ni-digitizer

./: README.md  pyproject.toml
dirigo_ni_digitizer/: __init__.py  dirigo_ni_digitizer.py
