[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dirigo_ni_digitizer"
version = "0.0.1"
description = "Plugin to use NI S- and X-series devices as digitizers in Dirigo."
authors = [
    {name = "T. D. Weber", email = "tweber@mit.edu"},
]
#license = {text = "MIT"}
dependencies = [
    "dirigo",
    "nidaqmx"
]

[project.entry-points."dirigo_digitizers"]
ni = "dirigo_ni_digitizer:NIDigitizer"

# New format:
# [project.entry-points."dirigo.devices.digitizers"]
# ni = "dirigo_ni_digitizer:NIDigitizer"