[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dirigo_ni_digitizer"
version = "0.1.1"
description = "Plugin to use NI S- and X-series devices as digitizers in Dirigo."
authors = [
    {name = "T. D. Weber", email = "tweber@mit.edu"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Topic :: System :: Hardware"
]
dependencies = [
    "dirigo",
    "nidaqmx"
]
urls = {"Homepage" = "https://github.com/dirigo-developers/dirigo-ni-digitizer"}

[project.entry-points."dirigo_digitizers"]
ni = "dirigo_ni_digitizer:NIDigitizer"

# New format:
# [project.entry-points."dirigo.devices.digitizers"]
# ni = "dirigo_ni_digitizer:NIDigitizer"